# signalbox

./: .coderabbit.yaml  .envrc  .gitattributes  .gitignore  .mdformat.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  devenv.nix  devenv.yaml  renovate.json5
.github/workflows/: deny.yml  rust.yml
apps/client/: Cargo.toml
apps/client/src/: arguments.rs  connection.rs  error.rs  lib.rs  main.rs  presentation.rs  transcript.rs
apps/client/tests/: end_to_end.rs
apps/hubd/: Cargo.toml
apps/hubd/src/: configuration.rs  current_time.rs  fenced_database.rs  lib.rs  local_socket.rs  main.rs  process_runtime.rs  single_hub.rs
apps/hubd/tests/: offline_reply.rs  offline_tool_loop.rs  process_protocol_runtime.rs  process_substrate.rs
clients/native/: .gitignore  README.md  VERIFICATION_REPORT.md
config/: hubd.example.toml
crates/application/: Cargo.toml
crates/application/src/: conversation_import.rs  create_session.rs  create_session_from_imported_frontier.rs  lib.rs  load_session.rs  model_execution.rs  operator_failure.rs  replace_session_defaults.rs  scheduler.rs  start_eligible_turn.rs  startup_scan.rs  submit_input.rs  tool_dispatch_gate.rs  tool_loop.rs  tool_loop_ports.rs
crates/conversation-import-claude-code/: Cargo.toml
crates/conversation-import-claude-code/src/: json.rs  lib.rs
crates/conversation-import-claude-code/tests/: real_transcripts.rs
crates/conversation-import-codex/: Cargo.toml
crates/conversation-import-codex/src/: lib.rs
crates/conversation-import-codex/tests/: real_rollouts.rs
crates/conversation-import-json/: Cargo.toml
crates/conversation-import-json/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: accepted_input.rs  actor.rs  applied_interrupt.rs  configuration.rs  context_frontier.rs  delivery_request.rs  fatal_mismatch.rs  imported_conversation.rs  imported_session.rs  lib.rs  model_call.rs  model_execution.rs  provider_evidence.rs  queue_order.rs  replace_session_defaults.rs  semantic_entry.rs  session.rs  submit_input.rs  tool.rs  tool_attempt.rs  tool_execution.rs  turn_attempt.rs  turn_eligibility.rs  turn_lifecycle.rs  user_content.rs
crates/domain/src/fatal_mismatch/: lifecycle.rs  prepared.rs
crates/expect-table/: Cargo.toml
crates/model-provider-runtime/: Cargo.toml
crates/model-provider-runtime/src/: lib.rs
crates/model-runtime/: Cargo.toml
crates/model-runtime-anthropic/: Cargo.toml
crates/model-runtime-anthropic/src/: config.rs  lib.rs  response.rs  runtime.rs  status.rs  stream.rs  translate.rs  wire.rs
crates/model-runtime-anthropic/tests/: loopback.rs
crates/model-runtime-openai/: Cargo.toml
crates/model-runtime/src/: credential.rs  evidence.rs  lib.rs  message.rs  observation.rs  operation.rs  output.rs  preparation.rs  provider_json.rs  runtime.rs  scripted.rs  settings.rs  sse.rs  target.rs  tool.rs  usage.rs
crates/persistence/: Cargo.toml  build.rs
crates/persistence/migrations/: 202607180001_create_session.sql  202607180002_replace_session_defaults.sql  202607180003_submit_input.sql  202607180004_turn_lifecycle_storage.sql  202607180005_occupied_slot_submit_input.sql  202607200001_bounded_user_content.sql  202607200002_transactional_outbox.sql  202607200006_scheduler_queued_index.sql  202607210001_turn_failed_outbox_event.sql  202607220001_model_call_execution.sql  202607220002_model_call_credential_reference.sql  202607220003_failed_terminal_execution.sql  202607220004_steering_consumption.sql  202607220005_stop_requests.sql  202607230001_conversation_import.sql  202607230001_process_runtime.sql  202607230001_tool_loop.sql  202607240001_conversation_import.sql  202607240001_tool_loop.sql  202607240002_imported_session_seed.sql  202607240003_imported_session_first_native_frontier.sql  202607240004_conversation_import_converter_v2.sql  202607240004_credential_reference_total.sql  202607240004_tool_loop.sql  202607240005_conversation_import_codex_format.sql
crates/persistence/src/: command_registry.rs  conversation_import.rs  conversation_import_codec.rs  create_session.rs  create_session_from_imported_frontier.rs  hub_fence.rs  imported_session.rs  lib.rs  lock_inventory.rs  mapping.rs  model_execution.rs  outbox.rs  process_read.rs  replace_session_defaults.rs  scheduler.rs  session.rs  start_eligible_turn.rs  startup.rs  submit_input.rs  tool_loop.rs
crates/persistence/tests/: conversation_import_postgres.rs  imported_conversation_e2e_postgres.rs  imported_session_postgres.rs  postgres_integration.rs
crates/persistence/tests/support/: mod.rs
crates/process-protocol/: Cargo.toml
crates/process-protocol/src/: lib.rs
docs/: architecture.md  decision-ledger.md  decisions.md  domain-spine.md  glossary.md  goal-mode.md  invariants.md  open-questions.md  scenarios.md  target-model.md  testing-strategy.md  testing-style.md  vision.md
docs/agents/: README.md  backlog.md  goal-mode.md  testing-style.md
docs/decisions/: 0001-domain-terminology-and-identity.md  0003-session-creation-and-transcript-ancestry.md  0004-turn-and-attempt-lifecycle.md  0005-model-call-retry-semantics.md  0009-dispatch-fencing.md  0010-initial-scheduler-mechanics.md  0017-credential-lifecycle.md  0019-process-protocol.md  0021-compatibility-and-negotiation.md  0022-persistence-representation.md  0027-input-delivery-lifecycle.md  0030-context-frontier-snapshots.md  0031-direct-fatal-terminalization.md  0032-postgres-implementation-dependencies.md  0033-identity-generation-supply-and-encoding.md  0033-postgres-implementation-dependencies.md  0034-durable-command-storage-and-equality.md  0035-domain-owned-persistence-reconstitution.md  0036-initial-semantic-transcript-entries.md  0037-baseline-user-content.md  0038-session-aggregate-boundary.md  0039-actor-attribution.md  0040-transactional-outbox.md  0041-evidence-bearing-reconstitution.md  0042-assistant-content-and-completion.md  0043-provider-failure-classification.md  0044-hub-runtime-foundations.md  (+5 more)
scripts/: check_domain_spine.py  check_session_lock_protocol.py
tooling/: requirements-mdformat.txt
(+81 files in other folders)
