[workspace]
members = [
    "apps/hubd",
    "crates/application",
    "crates/domain",
    "crates/persistence",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT"
repository = "https://github.com/KeenWill/signalbox"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
