[workspace]
members = [
    "apps/hubd",
    "crates/application",
    "crates/conversation-import-claude-code",
    "crates/domain",
    "crates/expect-table",
    "crates/model-runtime",
    "crates/model-runtime-anthropic",
    "crates/model-runtime-openai",
    "crates/model-provider-runtime",
    "crates/persistence",
    "crates/process-protocol",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT"
repository = "https://github.com/KeenWill/signalbox"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
