[package]
name = "signalbox-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "signalbox"
path = "src/main.rs"

[dependencies]
signalbox-process-protocol = { path = "../../crates/process-protocol" }
tokio = { version = "1.53.0", default-features = false, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
] }
uuid = { version = "1.24.0", default-features = false, features = ["std", "v7"] }

[dev-dependencies]
tokio = { version = "1.53.0", default-features = false, features = ["time"] }

[lints]
workspace = true
