[package]
name = "signalbox-hubd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
signalbox-application = { path = "../../crates/application" }
signalbox-domain = { path = "../../crates/domain" }
signalbox-persistence = { path = "../../crates/persistence" }
tokio = { version = "1.53.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "fmt",
] }

[dev-dependencies]
tokio = { version = "1.53.0", default-features = false, features = ["test-util"] }
uuid = { version = "1.24.0", default-features = false, features = ["std"] }

[lints]
workspace = true
