[package]
name = "signalbox-hubd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
signalbox-application = { path = "../../crates/application" }
signalbox-domain = { path = "../../crates/domain" }
signalbox-model-provider-runtime = { path = "../../crates/model-provider-runtime" }
signalbox-model-runtime = { path = "../../crates/model-runtime" }
signalbox-model-runtime-anthropic = { path = "../../crates/model-runtime-anthropic" }
signalbox-persistence = { path = "../../crates/persistence" }
signalbox-process-protocol = { path = "../../crates/process-protocol" }
rustix = { version = "1.1.4", default-features = false, features = [
    "fs",
    "net",
    "process",
    "std",
] }
sqlx = { version = "0.9.0", default-features = false, features = [
    "postgres",
    "runtime-tokio",
] }
tempfile = "3.27.0"
tokio = { version = "1.53.0", default-features = false, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
toml_edit = { version = "0.25.13", default-features = false, features = [
    "parse",
] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "fmt",
] }
uuid = { version = "1.24.0", default-features = false, features = ["std", "v7"] }

[dev-dependencies]
signalbox-conversation-import-claude-code = { path = "../../crates/conversation-import-claude-code" }
testcontainers-modules = { version = "0.15.0", default-features = false, features = [
    "postgres",
    "ring",
] }
tokio = { version = "1.53.0", default-features = false, features = ["test-util"] }

[lints]
workspace = true
