[package]
name = "signalbox-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
signalbox-domain = { path = "../domain" }
uuid = { version = "1.24.0", default-features = false, features = ["std", "v7"] }

[lints]
workspace = true
