[package]
name = "signalbox-conversation-import-codex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
signalbox-application = { path = "../application" }
signalbox-conversation-import-json = { path = "../conversation-import-json" }
signalbox-domain = { path = "../domain" }

[dev-dependencies]
uuid = { version = "1.24.0", default-features = false, features = ["std"] }

[lints]
workspace = true
