[package]
name = "signalbox-conversation-import-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde_json = "1.0.140"
signalbox-domain = { path = "../domain" }

[lints]
workspace = true
