[package]
name = "signalbox-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = "1.0.203"
serde_json = { version = "1.0.140", features = ["arbitrary_precision", "unbounded_depth"] }
serde_stacker = "0.1.14"
uuid = { version = "1.24.0", default-features = false }

[lints]
workspace = true

[dev-dependencies]
expect-test = "1.5.1"
signalbox-expect-table = { path = "../expect-table" }
