[package]
name = "signalbox-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
sha2 = "0.11.0"
uuid = { version = "1.24.0", default-features = false }

[lints]
workspace = true

[dev-dependencies]
expect-test = "1.5.1"
signalbox-expect-table = { path = "../expect-table" }
