[package]
name = "signalbox-model-provider-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
signalbox-application = { path = "../application" }
signalbox-domain = { path = "../domain" }
signalbox-model-runtime = { path = "../model-runtime" }
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["raw_value", "unbounded_depth"] }
serde_stacker = "0.1.14"

[dev-dependencies]
uuid = { version = "1.24.0", default-features = false }

[lints]
workspace = true
