[package]
name = "signalbox-model-provider-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
signalbox-application = { path = "../application" }
signalbox-domain = { path = "../domain" }
signalbox-model-runtime = { path = "../model-runtime" }
serde_json = { version = "1.0.140", features = ["raw_value"] }

[dev-dependencies]
uuid = { version = "1.24.0", default-features = false }

[lints]
workspace = true
