[package]
name = "signalbox-model-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.140"

[lints]
workspace = true

[dev-dependencies]
expect-test = "1.5.1"
serde = { version = "1.0.219", features = ["derive"] }
signalbox-expect-table = { path = "../expect-table" }
