[package]
name = "signalbox-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
sqlx = { version = "0.9.0", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "migrate",
    "macros",
    "uuid",
    "rust_decimal",
    "time",
] }
tokio = { version = "1.53.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

[lints]
workspace = true
