[package]
name = "signalbox-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
postgres-integration = ["dep:testcontainers-modules"]

[dependencies]
rust_decimal = { version = "1.42.1", default-features = false, features = ["std"] }
signalbox-application = { path = "../application" }
signalbox-domain = { path = "../domain" }
sqlx = { version = "0.9.0", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "migrate",
    "macros",
    "uuid",
    "rust_decimal",
    "time",
] }
tokio = { version = "1.53.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
testcontainers-modules = { version = "0.15.0", optional = true, default-features = false, features = [
    "postgres",
    "ring",
] }

[dev-dependencies]
signalbox-conversation-import-claude-code = { path = "../conversation-import-claude-code" }

[[test]]
name = "conversation_import_postgres"
path = "tests/conversation_import_postgres.rs"
required-features = ["postgres-integration"]

[[test]]
name = "imported_session_postgres"
path = "tests/imported_session_postgres.rs"
required-features = ["postgres-integration"]

[[test]]
name = "postgres_integration"
path = "tests/postgres_integration.rs"
required-features = ["postgres-integration"]

[lints]
workspace = true
